@@ -32,6 +32,8 @@ Misc work going on.....
 * Add ability to break off certain debug topics into additional log files;
   use $wgDebugLogGroups to configure and wfDebugLog() to log.
 * Finnish date format was hardcoded, now implemented properly
+* (bug 3190) Added some date format choices for language sr
+
 
 === Caveats ===
 
